--- a/index.html
+++ b/index.html
@@ -1,25 +1,290 @@
-<!-- index.html -->
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<!--
+Copyright 2022 The Immersive Web Community Group
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of
+this software and associated documentation files (the "Software"), to deal in
+the Software without restriction, including without limitation the rights to
+use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
+the Software, and to permit persons to whom the Software is furnished to do so,
+subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
+FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
+COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
+IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
+CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+-->
+<html>
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no'>
+  <meta name='mobile-web-app-capable' content='yes'>
+  <meta name='apple-mobile-web-app-capable' content='yes'>
+  <link rel='icon' type='image/png' sizes='32x32' href='favicon-32x32.png'>
+  <link rel='icon' type='image/png' sizes='96x96' href='favicon-96x96.png'>
+  <link rel='stylesheet' href='css/common.css'>
+
   <title>Network Viewer</title>
-  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>-->
-  
 </head>
+
 <body>
+  <header>
+    <details open>
+      <summary>System Keyboard</summary>
+      <p>
+        This sample demonstrates how to use the device's system keyboard to receive text input.
+        <a class="back" href="./index.html">Back</a>
+      </p>
+    </details>
+  </header>
   <div id="network-container"></div>
   <script type="importmap">
-    {
-      "imports": {
-        "three": "https://unpkg.com/three@0.150.1/build/three.module.js",
-        "three/addons/": "https://unpkg.com/three@0.150.1/examples/jsm/",
-        "webxr-polyfill": "https://cdn.jsdelivr.net/npm/webxr-polyfill@latest/build/webxr-polyfill.module.js"
+      {
+        "imports": {
+          "three": "https://unpkg.com/three@0.150.1/build/three.module.js",
+          "three/addons/": "https://unpkg.com/three@0.150.1/examples/jsm/",
+          "webxr-polyfill": "https://cdn.jsdelivr.net/npm/webxr-polyfill@latest/build/webxr-polyfill.module.js"
+        }
       }
-    }
-  </script>
+    </script>
   <!-- jsを読み込む -->
   <script type="module" src="main.js"></script>
+  <script type="module">
+    import { WebXRButton } from './js/util/webxr-button.js';
+    import { Scene, WebXRView } from './js/render/scenes/scene.js';
+    import { Renderer, createWebGLContext } from './js/render/core/renderer.js';
+    import { QueryArgs } from './js/util/query-args.js';
+
+    // If requested, use the polyfill to provide support for mobile devices
+    // and devices which only support WebVR.
+    import WebXRPolyfill from './js/third-party/webxr-polyfill/build/webxr-polyfill.module.js';
+    if (QueryArgs.getBool('usePolyfill', true)) {
+      let polyfill = new WebXRPolyfill();
+    }
+
+    // XR globals.
+    let xrButton = null;
+    let xrSession = null;
+    let xrRefSpace = null;
+    let xrGLFactory = null;
+    let xrFramebuffer = null;
+
+    // WebGL scene globals.
+    let gl = null;
+    let renderer = null;
+    let scene = new Scene();
+    scene.enableStats(false);
+
+    // Layer globals
+    let projLayer = null;
+    let cyldLayer = null;
+    let cyldTextureWidth = 0;
+    let cyldTextureHeight = 0;
+
+    // Text globals
+    let textField = null;
+    let canvas = null;
+    let renderingContext = null;
+    let fillStyles = ["silver", "gray", "white", "maroon", "red", "purple", "fuchsia", "green", "lime", "olive", "yellow", "navy", "blue", "teal", "aqua"];
+    let currentFillStyle = "white";
+
+    // These flags are unique to this sample and are not required for the system keyboard to work. For convenience, this sample triggers the keyboard on any background click. There is a race condition between the Select lifecycle events and visibility-changing when clicking on the background to dismiss the keyboard.
+    let selectInProgress = false; // check for a proper handoff between onSelectStart and onSelect
+    let skipNextFocus = false; // ignore one keyboard trigger if Select lifecycle was interrupted
+    let sessionVisible = true; // only trigger keyboard if Select was called after session is visible again
+
+    function initXR() {
+      xrButton = new WebXRButton({
+        onRequestSession: onRequestSession,
+        onEndSession: onEndSession
+      });
+      document.querySelector('header').appendChild(xrButton.domElement);
+
+      if (navigator.xr) {
+        navigator.xr.isSessionSupported('immersive-vr').then((supported) => {
+          xrButton.enabled = supported;
+        });
+      }
+    }
+
+    function onRequestSession() {
+      if (!xrSession) {
+        navigator.xr.requestSession('immersive-vr', {
+          requiredFeatures: ['layers'],
+        }).then(onSessionStarted);
+      } else {
+        onEndSession();
+      }
+    }
+
+    function initGL() {
+      if (gl) { return; }
+      gl = createWebGLContext({ xrCompatible: true, webgl2: true, });
+      document.body.appendChild(gl.canvas);
+      gl.clearColor(0.0, 0, 0, 0.0);
+
+      function onResize() {
+        gl.canvas.width = gl.canvas.clientWidth * window.devicePixelRatio;
+        gl.canvas.height = gl.canvas.clientHeight * window.devicePixelRatio;
+      }
+      window.addEventListener('resize', onResize);
+      onResize();
+
+      renderer = new Renderer(gl);
+      scene.setRenderer(renderer);
+    }
+
+    function onSessionStarted(session) {
+      xrSession = session;
+      scene.inputRenderer.useProfileControllerMeshes(session);
+      session.addEventListener('end', onSessionEnded);
+
+      initGL();
+
+      xrFramebuffer = gl.createFramebuffer();
+      xrGLFactory = new XRWebGLBinding(session, gl);
+
+      session.requestReferenceSpace('local').then((refSpace) => {
+        xrRefSpace = refSpace;
+        projLayer = xrGLFactory.createProjectionLayer({ space: refSpace, stencil: false });
+        session.updateRenderState({ layers: [projLayer] });
+
+        // Loading texture is async, create layer and update render state when done
+        cyldTextureWidth = 1500;
+        cyldTextureHeight = 750;
+        let viewPixelWidth = cyldTextureWidth;
+        let viewPixelHeight = cyldTextureHeight;
+        cyldLayer = xrGLFactory.createCylinderLayer({
+          space: refSpace,
+          viewPixelWidth: viewPixelWidth,
+          viewPixelHeight: viewPixelHeight,
+          layout: "mono",
+        });
+        cyldLayer.centralAngle = 60 * Math.PI / 180;
+        cyldLayer.aspectRatio = viewPixelWidth / viewPixelHeight;
+        cyldLayer.radius = 2;
+
+        session.updateRenderState({ layers: [cyldLayer, projLayer] });
+
+        canvas = document.createElement('canvas');
+        canvas.width = cyldTextureWidth;
+        canvas.height = cyldTextureHeight;
+
+        session.requestAnimationFrame(onXRFrame);
+      });
+
+      textField = document.createElement("input");
+      textField.type = "text";
+      textField.value = "Click anywhere to show the system keyboard"
+      if (!session.isSystemKeyboardSupported) {
+        textField.value = "System keyboard is not supported"
+      }
+      textField.oninput = function () {
+        currentFillStyle = fillStyles[Math.floor(Math.random() * fillStyles.length)];
+      };
+      document.body.appendChild(textField);
+
+      session.addEventListener('selectstart', onSelectStart);
+      session.addEventListener('select', onSelect);
+      session.addEventListener('visibilitychange', onVisibilityChange);
+    }
+
+    function onSelectStart(ev) {
+      if (selectInProgress) {
+        // previous select lifecycle was short-circuited
+        skipNextFocus = true;
+      }
+      selectInProgress = true;
+    }
+
+    function onSelect(ev) {
+      selectInProgress = false;
+
+      if (skipNextFocus) {
+        skipNextFocus = false;
+      } else if (sessionVisible) {
+        textField.focus();
+      }
+    }
+
+    function onVisibilityChange(ev) {
+      if (ev.session.visibilityState === 'visible') {
+        sessionVisible = true;
+      }
+      if (ev.session.visibilityState === 'visible-blurred') {
+        sessionVisible = false;
+
+        // reset flags upon keyboard showing
+        selectInProgress = false;
+        skipNextFocus = false;
+      }
+    }
+
+    function onEndSession() {
+      xrSession.end();
+    }
+
+    function onSessionEnded(event) {
+      if (event.session.isImmersive) {
+        xrButton.setSession(null);
+      }
+      xrSession = null;
+      gl = null;
+
+      textField.remove();
+    }
+
+    function onXRFrame(time, frame) {
+      let pose = frame.getViewerPose(xrRefSpace);
+      scene.startFrame();
+      xrSession.requestAnimationFrame(onXRFrame);
+
+      renderingContext = canvas.getContext('2d');
+      renderingContext.font = '48px serif';
+      renderingContext.fillStyle = currentFillStyle;
+      renderingContext.clearRect(0, 0, canvas.width, canvas.height);
+      renderingContext.fillText(textField.value, 10, 50);
+
+      let glayer = xrGLFactory.getSubImage(cyldLayer, frame);
+
+      // TEXTURE_CUBE_MAP expects the Y to be flipped for the faces and it already
+      // is flipped in our texture image.
+      gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true);
+      gl.bindTexture(gl.TEXTURE_2D, glayer.colorTexture);
+      gl.texSubImage2D(gl.TEXTURE_2D, 0,
+        0, 0,
+        gl.RGBA, gl.UNSIGNED_BYTE, canvas);
+      gl.bindTexture(gl.TEXTURE_2D, null);
+
+      if (pose) {
+        gl.bindFramebuffer(gl.FRAMEBUFFER, xrFramebuffer);
+        scene.updateInputSources(frame, xrRefSpace);
+
+        let views = [];
+        for (let view of pose.views) {
+          let viewport = null;
+          let glLayer = xrGLFactory.getViewSubImage(projLayer, view);
+          glLayer.framebuffer = xrFramebuffer;
+          viewport = glLayer.viewport;
+          gl.bindFramebuffer(gl.FRAMEBUFFER, xrFramebuffer);
+          gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, glLayer.colorTexture, 0);
+          gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.DEPTH_ATTACHMENT, gl.TEXTURE_2D, glLayer.depthStencilTexture, 0);
+          views.push(new WebXRView(view, glLayer, viewport));
+        }
+        scene.drawViewArray(views);
+      }
+      // scene.drawXRFrame(frame, pose);
+      scene.endFrame();
+    }
+
+    initXR();
+  </script>
 </body>
+
 </html>
